adjusted the visual display of the card

--- a/index.html
+++ b/index.html
@@ -13,13 +13,12 @@
     </header>
 
     <main class="card">
-            <figure>
-                <img src="./images/pexels-samer-daboul-chicken image.jpg" alt="Image of a chicken">
-            </figure>
-            
+        <figcaption>Chicken</figcaption>
+        <figure>
+            <img src="./images/pexels-samer-daboul-chicken image.jpg" alt="Image of a chicken">
+        </figure>
         <section class='details-container'>
             <ul>
-                <li><span class="caption-container">Name :</span> Chicken.</li>
                 <li><span class="caption-container">Scientific Name :</span> Gallus gallus domesticus.</li>
                 <li><span class="caption-container">Class :</span> Aves (Birds).</li>
                 <li><span class="caption-container">Average Life Span :</span> 5 – 10 years.</li>
@@ -30,10 +29,10 @@
     </main>
 
     <footer>
-            <span><strong>Created by :</strong> Kizito Chinazo Ibeh</span> 
-            <span><strong>Path:</strong> Frontend Development</span>           
-            <span><strong>For:</strong> Genesys Tech Hub Enugu</span>
-            <span><strong>Date:</strong> December 2022</span>
+            <p><strong>Created by :</strong> Kizito Chinazo Ibeh</p> 
+            <p><strong>Path:</strong> Frontend Development</p>           
+            <p><strong>For:</strong> Genesys Tech Hub Enugu</p>
+            <p><strong>Date:</strong> December 2022</p>
     </footer>
 </body>
 </html>
