Made some design adjustments

--- a/index.html
+++ b/index.html
@@ -1,38 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>My Favourite Animal Card</title>
-    <link rel="stylesheet" href="./styles/styles.css">
-</head>
-<body>
+    <link rel="stylesheet" href="./styles/styles.css" />
+  </head>
+  <body>
     <header>
-        <h2>My Favourite Animal Card</h2>
+      <h2>My Favourite Animal Card</h2>
     </header>
 
     <main class="card">
-        <figcaption>Chicken</figcaption>
-        <figure>
-            <img src="./images/pexels-samer-daboul-chicken image.jpg" alt="Image of a chicken">
-        </figure>
-        <section class='details-container'>
-            <ul>
-                <li><span class="caption-container">Scientific Name :</span> Gallus gallus domesticus.</li>
-                <li><span class="caption-container">Class :</span> Aves (Birds).</li>
-                <li><span class="caption-container">Average Life Span :</span> 5 – 10 years.</li>
-                <li><span class="caption-container">Nutrional Contribution :</span> White Meat and Eggs.</li>
-                <li><span class="caption-container">Description :</span> Chickens are one of the most common and widespread domestic animals.</li>
-            </ul>
-        </section>
+      <figcaption>Chicken</figcaption>
+      <figure>
+        <img
+          src="./images/pexels-samer-daboul-chicken image.jpg"
+          alt="Image of a chicken"
+        />
+      </figure>
+      <section class="details-container">
+        <ul>
+          <li>
+            <span class="caption-container">Scientific Name :</span> Gallus
+            gallus domesticus.
+          </li>
+          <li><span class="caption-container">Class :</span> Aves (Birds).</li>
+          <li>
+            <span class="caption-container">Average Life Span :</span> 5 –
+            10 years.
+          </li>
+          <li>
+            <span class="caption-container">Nutrional Contribution :</span>
+            White Meat and Eggs.
+          </li>
+          <li>
+            <span class="caption-container">Description :</span> Chickens are
+            one of the most common and widespread domestic animals.
+          </li>
+        </ul>
+      </section>
     </main>
 
     <footer>
-            <p><strong>Created by :</strong> Kizito Chinazo Ibeh</p> 
-            <p><strong>Path:</strong> Frontend Development</p>           
-            <p><strong>For:</strong> Genesys Tech Hub Enugu</p>
-            <p><strong>Date:</strong> December 2022</p>
+      <p><strong>Created by :</strong> Kizito Chinazo Ibeh</p>
+      <p><strong>Path:</strong> Frontend Development</p>
+      <p><strong>For:</strong> Genesys Tech Hub Enugu</p>
+      <p><strong>Date:</strong> December 2022</p>
     </footer>
-</body>
+  </body>
 </html>
